Adding salvaLocal modifications

--- a/detect.html
+++ b/detect.html
@@ -11,6 +11,7 @@
 		
 		<script type="text/javascript" src="scripts/AC_RunActiveContent.js"></script>
 		<script type="text/javascript" src="scripts/protoaculous.js"></script>
+		<script type="text/javascript" src="scripts/salvaLocal.js"></script>
 		<script type="text/javascript" src="scripts/deployJava.js"></script>
 		<script type="text/javascript" src="scripts/AC_OETags.js"></script>
 		<script type="text/javascript" src="scripts/browser.js"></script>
