--- a/mapa.html
+++ b/mapa.html
@@ -63,7 +63,7 @@
 	fetch("scripts/estrutura.xml")
 			.then(function(response){
 			response.text().then(function(data){
-				const m = new Mapinha("conteudo","Jogo Maximo");
+				const m = new Mapinha("conteudo",nomeSoft);
 				m.parseXml(data);
 				m.adicionaBotoesItens();
 				});
