--- a/mapa.html
+++ b/mapa.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="css/popup.css" media="screen, projection" />
 		<script type="text/javascript" src="scripts/AC_RunActiveContent.js"></script>
 		<script type="text/javascript" src="scripts/protoaculous.js"></script>
+		<script type="text/javascript" src="../scripts/salvaLocal.js"></script>
 		<script type="text/javascript" src="scripts/popup.js"></script>
 		<script type="text/javascript" src="scripts/funcoes_estilizadas.js"></script>
 		<title>Explorando o Jogo do Máximo</title>
@@ -43,7 +44,7 @@
 			<div id="abertura">
 				<div id="conteudo">
 					<a id="limpar" style="position:absolute; right:20px; top: 20px; color:RGB(210,25,42); font-weight:bold; ">Limpar dados</a>
-					<embed height="480" id="Mapinha" align="middle" width="960" type="application/x-shockwave-flash" wmode="transparent" salign="" allowscriptaccess="sameDomain" allowfullscreen="false" menu="false" name="Mapinha" bgcolor="#ffffff" devicefont="false" wmode="window" scale="showall" loop="true" play="true" pluginspage="http://www.macromedia.com/go/getflashplayer" quality="high" src="applets/Mapinha.swf"/>
+					<!-- <embed height="480" id="Mapinha" align="middle" width="960" type="application/x-shockwave-flash" wmode="transparent" salign="" allowscriptaccess="sameDomain" allowfullscreen="false" menu="false" name="Mapinha" bgcolor="#ffffff" devicefont="false" wmode="window" scale="showall" loop="true" play="true" pluginspage="http://www.macromedia.com/go/getflashplayer" quality="high" src="applets/Mapinha.swf"/> -->
 				</div>
 			</div>
 			<br class="limpador" />
