--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" type="text/css" href="css/popup.css" media="screen, projection" />
 		<link href='https://fonts.googleapis.com/css?family=Fira+Sans' rel='stylesheet'>
 		<script type="text/javascript" src="scripts/protoaculous.js"></script>
-		<script type="text/javascript" src="../scripts/salvaLocal.js"></script>
+		<script type="text/javascript" src="scripts/salvaLocal.js"></script>
 		<script type="text/javascript" src="scripts/AC_RunActiveContent.js"></script>
 		<script type="text/javascript" src="scripts/popup.js"></script>
 		<script type="text/javascript" src="scripts/abertura.js"></script>
@@ -129,7 +129,7 @@
 				<div id="conteudo">
 					<!-- SalvaLocal -->
 						<div class="salva_local">
-							
+
 						</div>
 					<h1>Explorando o Jogo do Máximo<i>v2.0</i></h1>
 					<div id="apresentacao">
