--- a/mapa.html
+++ b/mapa.html
@@ -8,7 +8,7 @@
 		<script type="text/javascript" src="scripts/mapinha.js"></script>
 		<script type="text/javascript" src="scripts/AC_RunActiveContent.js"></script>
 		<script type="text/javascript" src="scripts/protoaculous.js"></script>
-		<script type="text/javascript" src="../scripts/salvaLocal.js"></script>
+		<script type="text/javascript" src="scripts/salvaLocal.js"></script>
 		<script type="text/javascript" src="scripts/popup.js"></script>
 		<script type="text/javascript" src="scripts/funcoes_estilizadas.js"></script>
 		<title>Explorando o Jogo do Máximo</title>
