--- a/mapa.html
+++ b/mapa.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+
 <html xmlns = "http://www.w3.org/1999/xhtml"  xml:lang = "pt-br"  lang = "pt-br">
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<link rel="stylesheet" type="text/css" href="css/abertura.css" media="screen, projection" />
 		<link rel="stylesheet" type="text/css" href="css/popup.css" media="screen, projection" />
 		<script type="text/javascript" src="scripts/AC_RunActiveContent.js"></script>
 		<script type="text/javascript" src="scripts/protoaculous.js"></script>
+		<script type="text/javascript" src="scripts/salvaLocal.js"></script>
 		<script type="text/javascript" src="scripts/popup.js"></script>
-		<script type="text/javascript" src="scripts/funcoes_estilizadas.js"></script>
+		<script type="text/javascript" src="scripts/m3_geral.js"></script>
+		<script type="text/javascript" src="scripts/mapinha.js"></script>
+
 		<title>Explorando o Jogo do Máximo</title>
 		<script type="text/javascript">
+			var nomeSoft = 'halos1';
 			var Perguntas = $H({
 				limpar: {
 					conteudo: '<p>Isso irá apagar todos os dados armazenados, como respostas guardadas, para essa unidade.</p><p style="margin-top:10px;">Você tem certeza?</p>',
@@ -22,7 +27,29 @@
 					respostas: [{sim: 'Sim'}, {nao: 'Não'}]
 				}
 			});
+
+			function resetar() {
+				if (this.resultado == 'sim') {
+					$('Mapinha').ApagaTudo('halos1');
+
+					//$('Mapinha').Salva(nomeSoft, 'atividade_1', '1');
+					//$('Mapinha').Salva(nomeSoft, 'atividade_2', '1');
+					//$('Mapinha').Salva(nomeSoft, 'atividade_3', '1');
+					/*
+					$('Mapinha').Salva(nomeSoft, 'automacao_atividade_1_parte_0',2);
+					$('Mapinha').Salva(nomeSoft, 'automacao_atividade_1_parte_1',2);
+					$('Mapinha').Salva(nomeSoft, 'automacao_atividade_1_parte_2',2);
+					$('Mapinha').Salva(nomeSoft, 'automacao_atividade_1_parte_3',2);
+					$('Mapinha').Salva(nomeSoft, 'automacao_atividade_1_parte_4',2);
+					$('Mapinha').Salva(nomeSoft, 'automacao_atividade_2_parte_0',2);
+					$('Mapinha').Salva(nomeSoft, 'automacao_atividade_3_parte_0',2);
+					$('Mapinha').Salva(nomeSoft, 'automacao_atividade_3_parte_1',2);
+					*/
+					location.reload();
+				}
+			}
 		</script>
+
 	</head>
 	<body>
 		<div id="container">
@@ -36,21 +63,34 @@
 					<a href="introducao.html">Introdução</a>
 					<a href="index.html">Início</a>
 				</div>
-				
+
 				<br class="limpador" />
 			</div>
-			
+
 			<div id="abertura">
 				<div id="conteudo">
 					<a id="limpar" style="position:absolute; right:20px; top: 20px; color:RGB(210,25,42); font-weight:bold; ">Limpar dados</a>
-					<embed height="480" id="Mapinha" align="middle" width="960" type="application/x-shockwave-flash" wmode="transparent" salign="" allowscriptaccess="sameDomain" allowfullscreen="false" menu="false" name="Mapinha" bgcolor="#ffffff" devicefont="false" wmode="window" scale="showall" loop="true" play="true" pluginspage="http://www.macromedia.com/go/getflashplayer" quality="high" src="applets/Mapinha.swf"/>
 				</div>
 			</div>
 			<br class="limpador" />
 			<div id="rodape">
-				<a target="_blank" href="http://m3.mat.br/">Sobre o Matemática Multimídia</a>
+				<a target="_blank" href="http://m3.ime.unicamp.br/">Sobre o Matemática Multimídia</a>
 			</div>
 		</div>
+
+		<script>
+		fetch("scripts/estrutura.xml")
+			.then(function(response){
+			response.text().then(function(data){
+				const m = new Mapinha("conteudo", nomeSoft);
+				m.parseXml(data);
+				m.adicionaBotoesItens();
+				});
+			})
+			.catch(function(err){
+			console.error('Failed retrieving information', err);
+			});
+		</script>
 
 	</body>
 </html>
