--- a/mapa.html
+++ b/mapa.html
@@ -10,12 +10,11 @@
 		<script type="text/javascript" src="scripts/protoaculous.js"></script>
 		<script type="text/javascript" src="scripts/salvaLocal.js"></script>
 		<script type="text/javascript" src="scripts/popup.js"></script>
-		<script type="text/javascript" src="scripts/m3_geral.js"></script>
 		<script type="text/javascript" src="scripts/mapinha.js"></script>
 
 		<title>Explorando o Jogo do Máximo</title>
 		<script type="text/javascript">
-			var nomeSoft = 'halos1';
+			var nomeSoft = 'maximo';
 			var Perguntas = $H({
 				limpar: {
 					conteudo: '<p>Isso irá apagar todos os dados armazenados, como respostas guardadas, para essa unidade.</p><p style="margin-top:10px;">Você tem certeza?</p>',
