--- a/mapa.html
+++ b/mapa.html
@@ -29,21 +29,7 @@
 
 			function resetar() {
 				if (this.resultado == 'sim') {
-					$('Mapinha').ApagaTudo('halos1');
-
-					//$('Mapinha').Salva(nomeSoft, 'atividade_1', '1');
-					//$('Mapinha').Salva(nomeSoft, 'atividade_2', '1');
-					//$('Mapinha').Salva(nomeSoft, 'atividade_3', '1');
-					/*
-					$('Mapinha').Salva(nomeSoft, 'automacao_atividade_1_parte_0',2);
-					$('Mapinha').Salva(nomeSoft, 'automacao_atividade_1_parte_1',2);
-					$('Mapinha').Salva(nomeSoft, 'automacao_atividade_1_parte_2',2);
-					$('Mapinha').Salva(nomeSoft, 'automacao_atividade_1_parte_3',2);
-					$('Mapinha').Salva(nomeSoft, 'automacao_atividade_1_parte_4',2);
-					$('Mapinha').Salva(nomeSoft, 'automacao_atividade_2_parte_0',2);
-					$('Mapinha').Salva(nomeSoft, 'automacao_atividade_3_parte_0',2);
-					$('Mapinha').Salva(nomeSoft, 'automacao_atividade_3_parte_1',2);
-					*/
+					$('Mapinha').ApagaTudo('maximo');
 					location.reload();
 				}
 			}
