--- a/mapa.html
+++ b/mapa.html
@@ -29,7 +29,7 @@
 
 			function resetar() {
 				if (this.resultado == 'sim') {
-					$('Mapinha').ApagaTudo(nomeSoft);
+					$('SalvaLocal').ApagaTudo(nomeSoft);
 					location.reload();
 				}
 			}
