--- a/atividade1_parte1.html
+++ b/atividade1_parte1.html
@@ -134,7 +134,7 @@
 
 					<div class="caixa instrucoes">
 						<h2>Instruções</h2>
-						<p>Ao clicar no botão "Fazer 1 jogada", você lançará os dois dados de uma vez. Clicando no botão "Fazer 10 jogadas", os dados serão lançados dez vezes. Para apagar os registros das jogadas simuladas e começar tudo novamente, bastar clicar no botão "Zerar registros".</p>
+						<p>Ao clicar no botão "Jogar 1 vez", você lançará os dois dados de uma vez. Clicando no botão "Jogar 10 vezes", os dados serão lançados dez vezes. Para apagar os registros das jogadas simuladas e começar tudo novamente, bastar clicar no botão "Zerar registros".</p>
 						<p>Para se habituar a essa ferramenta, faça algumas jogadas e observe que os resultados aparecerão registrados na tabela e nos gráficos ao lado.</p>
 						<p>Quando sentir que já entendeu como tudo funciona, apague os registros e passe para as questões a seguir.</p>
 					</div>
@@ -237,8 +237,8 @@
 			<div id="associacao"></div>
 			</div>
 			<div id="comandos">
-				<p><input type="button" class="botao botao_grande" value="Fazer 1 jogada" id="jogadaIndividutalButton">
-				<input type="button" class="botao botao_grande" value="Fazer 10 jogadas" id="10JogadasButton">
+				<p><input type="button" class="botao botao_grande" value="Jogar 1 vez" id="jogadaIndividutalButton">
+				<input type="button" class="botao botao_grande" value="Jogar 10 vezes" id="10JogadasButton">
 				<input type="button" class="botao botao_grande" value="Zerar registros" id="zerarJogadasButton"></p>
 			</div>
 		</div>
