--- a/index.html
+++ b/index.html
@@ -50,57 +50,56 @@
 				{
 					titulo: 'Fotografia',
 					texto: 'Augusto Fidalgo'
+				},
+				{
+          titulo: 'Atualizações',
+          texto: 'Claudio Dos Santos Júnior, José Philipe Mendes De Godoy, Samuel Batista De Souza, Thais Araujo Bispo, Vinícius Andrade Santos'
 				}
 
 				);
 
-		var FichaProjeto = new Array(
-				{
-					titulo: '- Unicamp -',
-					texto: ''
-				},
-				{
-					titulo: 'Reitor',
-					texto: 'José Tadeu Jorge'
-				},
-				{
-					titulo: 'Vice-Reitor',
-					texto: 'Fernando Ferreira da Costa'
-				},
-				{
-					titulo: '- IMECC -',
-					texto: ''
-				},
-				{
-					titulo: 'Diretor',
-					texto: 'Jaime Vaz'
-				},
-				{
-					titulo: 'Vice-Diretor',
-					texto: 'Edmundo Capellas'
-				},
-				{
-					titulo: '- Matemática Multimídia -',
-					texto: ''
-				},
-				{
-					titulo: 'Coordenação Geral',
-					texto: 'Samuel Rocha de Oliveira'
-				},
-				{
-					titulo: 'Coordenação de Software',
-					texto: 'Leonardo Barichello'
-				},
-
-				{
-					titulo: 'Coordenação de de Implementação',
-					texto: 'Matias Costa'
-				},
-				{
-					titulo: 'Supervisora de Software',
-					texto: 'Heloísa V. Rocha'
-				}
-			);
+				var FichaProjeto = new Array(
+						{
+							titulo: '- Unicamp -',
+							texto: ''
+						},
+						{
+							titulo: 'Reitor',
+							texto: 'Marcelo Knobel'
+						},
+						{
+							titulo: 'Vice-Reitor',
+							texto: 'Edgar Salvadori de Decca'
+						},
+						{
+							titulo: '- IMECC -',
+							texto: ''
+						},
+						{
+							titulo: 'Diretor',
+							texto: 'Paulo R. C. Ruffino'
+						},
+						{
+							titulo: 'Diretor associado',
+							texto: 'Ricardo Miranda Martins'
+						},
+						{
+							titulo: '- Matemática Multimídia -',
+							texto: ''
+						},
+						{
+							titulo: 'Coordenação Geral',
+							texto: 'Samuel Rocha de Oliveira'
+						},
+						{
+							titulo: 'Coordenação de Software',
+							texto: 'Leonardo Barichello'
+						},
+						{
+							titulo: 'Coordenação de Implementação',
+							texto: 'Matias Costa'
+						}
+					);
 
 			var Links = $H({
 			});
