--- a/atividade1_parte3.html
+++ b/atividade1_parte3.html
@@ -268,8 +268,8 @@
 			<div id="associacao"></div>
 			</div>
 			<div id="comandos">
-				<p><input type="button" class="botao botao_grande" value="Fazer 1 jogada" id="jogadaIndividutalButton">
-				<input type="button" class="botao botao_grande" value="Fazer 10 jogadas" id="10JogadasButton">
+				<p><input type="button" class="botao botao_grande" value="Jogar 1 vez" id="jogadaIndividutalButton">
+				<input type="button" class="botao botao_grande" value="Jogar 10 vezes" id="10JogadasButton">
 				<input type="button" class="botao botao_grande" value="Zerar registros" id="zerarJogadasButton"></p>
 			</div>
 		</div>
