--- a/mapa.html
+++ b/mapa.html
@@ -4,6 +4,7 @@
 <html xmlns = "http://www.w3.org/1999/xhtml"  xml:lang = "pt-br"  lang = "pt-br">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<link rel="stylesheet" type="text/css" href="css/mapinha.css" media="screen, projection" />
 		<link rel="stylesheet" type="text/css" href="css/abertura.css" media="screen, projection" />
 		<link rel="stylesheet" type="text/css" href="css/popup.css" media="screen, projection" />
 		<script type="text/javascript" src="scripts/AC_RunActiveContent.js"></script>
