--- a/desafio1.html
+++ b/desafio1.html
@@ -44,7 +44,7 @@
 		<script type="text/javascript" src="scripts/inputs.js"></script>
 		<script type="text/javascript">
 
-			var nomeSoft="Maximo";
+			var nomeSoft="maximo";
 			var PosicaoAtual = {Atividade: 3, Parte: 0};
 			var ProximaParte = 'mapa.html';
 
@@ -272,6 +272,7 @@
 			<div id="comandos">
 				<p><input type="button" class="botao botao_grande" value="Jogar 1 vez" id="jogadaIndividutalButton">
 				<input type="button" class="botao botao_grande" value="Jogar 10 vezes" id="10JogadasButton">
+				<input type="button" class="botao botao_grande" value="Jogar 25 vezes" id="25JogadasButton">
 				<input type="button" class="botao botao_grande" value="Zerar registros" id="zerarJogadasButton"></p>
 			</div>
 		</div>
